--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <p>address info<br>
     8799890501<br>
     aishpkarnde@gmail.com</p>
-    <form class="" action="mailto:apkarande02@gmail.com" method="post">
+    <form class="" action="mailto:apkarande02@gmail.com" method="post" enctype="text/plain>
         <label>Your Name:</label>
         <input type="text" name="" value=""><br>
         <label>Your Email:</label>
